--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -218,6 +218,7 @@ nav:
       - evaluate/index.md
       - Criteria: evaluate/criteria.md
       - User Simulation: evaluate/user-sim.md
+      - Perspectivist research assistant: evaluate/perspectivist-research-assistant.md
     - Safety and Security:
       - safety/index.md
   - Components:
